# rinha-2-django-orm

./: Dockerfile.pypy  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
rinha/: settings.py
rinha/apps/core/: views.py
